# satoru-keeper

./: .all-contributorsrc  .env.example  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  config.yml
.github/workflows/: build.yml  test.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  keeper.rs  lib.rs  utils.rs
crates/core/src/keepers/: common.rs  config.rs  mod.rs
crates/core/src/types/: field_element.rs  field_element_utils.rs  mod.rs  set_prices_params.rs
crates/service/: Cargo.toml
crates/service/src/: main.rs
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
indexer/: .env.example  Cargo.toml  README.md
indexer/src/: config.rs  database.rs  main.rs  provider.rs
indexer/src/blockchain/: head_chain.rs  mod.rs
indexer/src/events/: deposit.rs  event.rs  handler.rs  market_created.rs  mod.rs  order.rs  order_executed.rs  pool_amount_updated.rs  position.rs  position_increase.rs  swap_fees_collected.rs  swap_info.rs  types.rs  withdrawal.rs
keeper/: .env.example  .gitignore  Cargo.toml
keeper/resources/: satoru_DataStore.contract_class.json  satoru_DepositHandler.contract_class.json  satoru_Oracle.contract_class.json  satoru_OrderHandler.contract_class.json  satoru_Reader.contract_class.json  satoru_WithdrawalHandler.contract_class.json
keeper/src/: error.rs  lib.rs  listen_db.rs  main.rs  query.rs  types.rs  utils.rs
keeper/src/deposit/: handle.rs
keeper/src/liquidation/: error.rs  process.rs  utils.rs
keeper/src/order/: handle.rs
keeper/src/price/: error.rs  mod.rs  utils.rs
keeper/src/trade/: error.rs  mod.rs  utils.rs
keeper/src/trade/deposit/: error.rs  handle.rs
keeper/src/trade/order/: error.rs  handle.rs  mod.rs
keeper/src/trade/price/: utils.rs
keeper/src/trade/withdrawal/: error.rs  handle.rs  mod.rs
keeper/src/trigger/: error.rs  execution.rs  mod.rs  process.rs
keeper/src/withdrawal/: handle.rs
resources/: satoru_OrderHandler.compiled_contract_class.json  satoru_OrderHandler.contract_class.json  satoru_WithdrawalHandler.contract_class.json
rest-api/: Cargo.toml
rest-api/src/: api.rs  main.rs
sql/: db_setup.sql  insert.sql
src/: lib.rs  listen_db.rs  main.rs  types.rs
src/deposit/: handle.rs
src/order/: handle.rs
src/withdrawal/: handle.rs
