[package]
name = "keeper-satoru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls" , "postgres"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-0_8"] }
starknet = "0.9.0"
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.2.9", features = ["abigen-rs"] }