[package]
name = "satoru-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
starknet = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.50"
dotenv = "0.15"
url = "2"
hex = "0.4"
bigdecimal = "0.3"
