[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.9.1"
dotenv = "0.15"
bigdecimal = "0.3"
serde_with = "1.9"
