[package]
name = "satoru-keeper-core"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]

# Starknet related dependencies
starknet = { workspace = true }

# Third party dependencies
derive_builder = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
lazy_static = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false                                            # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
