[package]
name = "satoru-keeper-service"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
# Satoru dependencies
satoru-keeper-core = { workspace = true }
# Third-party dependencies
color-eyre = "0.6.2"
log = { workspace = true }
env_logger = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false                                            # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
